small tweaks